--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -18,7 +18,7 @@
 
     <div itemprop="articleBody">
       <p>This FAQ covers websites and services. If you are reporting on a client software issue
-        (e.g. a security issue in the Firefox browser), please see the 
+        (e.g. a security issue in the Firefox browser), please see the
         <a href="{{ url('security.bug-bounty.faq') }}">Client Security Bug Bounty Program FAQ.</a>
         For more about the background of the bug bounty program see the
         <a href="{{ url('security.bug-bounty') }}">official guidelines</a>
@@ -64,12 +64,12 @@
         <dt class="question" id="why">Why do we include web applications
           as part of our security Bug Bounty Program?</dt>
         <dd class="answer">
-          <p>Mozilla client software relies on web services, and Mozilla's community uses 
+          <p>Mozilla client software relies on web services, and Mozilla’s community uses
           websites and services to communicate and coordinate activity.
           Our goal is to make our products and services more secure.
-          Mozilla community members submitted bugs before we had an official bounty program 
-          to reward researchers. The bounty program is designed to incentivize bug reporting towards the websites, 
-          services, and types of bugs we'd like community members to focus on.</p>
+          Mozilla community members submitted bugs before we had an official bounty program
+          to reward researchers. The bounty program is designed to incentivize bug reporting towards the websites,
+          services, and types of bugs we’d like community members to focus on.</p>
         </dd>
 
         <dt class="question" id="howto">How can I find potential vulnerabilities
@@ -102,8 +102,8 @@
           <p>Yes, here it is:
             <a href="https://wiki.mozilla.org/WebAppSec/Web_App_Severity_Ratings">
               Web Application Severity Ratings</a></p>
-              The bounty committee's reward is based on the security and privacy 
-              impact of the bug and ultimately the importance of the website or service. 
+              The bounty committee’s reward is based on the security and privacy
+              impact of the bug and ultimately the importance of the website or service.
         </dd>
       </dl>
 
@@ -112,23 +112,23 @@
         <dt class="question" id="eligible-bugs">Which domains and web applications
           will be considered to be part of the bug bounty?</dt>
         <dd class="answer">
-          <p>Below is the list of domains eligible for Mozilla’s website and services 
-            security bug bounty. Please check it regularly, it changes over time</p>
+          <p>Below is the list of domains eligible for Mozilla’s website and services
+            security bug bounty. Please check it regularly, as it changes over time.</p>
 
-          <strong>www.mozilla.com/org</strong>
+          <h4>www.mozilla.com/org</h4>
           <ul>
           	<li>www.mozilla.com</li>
           	<li>www.mozilla.org</li>
           	<li>www.firefox.com<li>
           	<li>www.getfirefox.com</li>
           </ul>
-          <br>
-          <strong>ABSearch</strong>
+
+          <h4>ABSearch</h4>
           <ul>
           	<li>Search.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Addons.mozilla.org</strong>
+
+          <h4>Addons.mozilla.org</h4>
           <ul>
           	<li>addon.mozilla.org</li>
           	<li>addons.mozilla.org</li>
@@ -141,27 +141,32 @@
           	<li>versioncheck-bg.addons.mozilla.org</li>
           	<li>Versioncheck.addons.mozilla.org</li>
           </ul>
-          <br>
-          <strong>bugzilla.mozilla.org</strong> Pleease don't use automated scanners and create bugs for testing on the production instance. Install your own local copy for testing from https://github.com/mozilla/webtools-bmo-bugzilla
+
+          <h4>bugzilla.mozilla.org</h4>
+          <p>
+            <strong>Please don’t use automated scanners and create bugs for testing on the production instance.</strong>
+            Install your own local copy for testing from
+            <a href="https://github.com/mozilla/webtools-bmo-bugzilla">https://github.com/mozilla/webtools-bmo-bugzilla</a>.
+          </p>
           <ul>
           	<li>bugzilla.mozilla.org</li>
           </ul>
-          <br>
-          <strong>Product Delivery</strong>
+
+          <h4>Product Delivery</h4>
           <ul>
           	<li>download-installer.cdn.mozilla.net</li>
           	<li>Download.mozilla.org</li>
           </ul>
-          <br>
-          <strong>AUS/Balrog</strong>
+
+          <h4>AUS/Balrog</h4>
           <ul>
           	<li>aus3.mozilla.org</li>
           	<li>aus4.mozilla.org</li>
           	<li>aus5.mozilla.org</li>
           	<li>Aus.mozilla.org</li>
           </ul>
-          <br>
-          <strong>Firefox Accounts</strong>
+
+          <h4>Firefox Accounts</h4>
           <ul>
           	<li>accounts.firefox.com</li>
           	<li>api.accounts.firefox.com</li>
@@ -169,33 +174,33 @@
           	<li>profile.accounts.firefox.com</li>
           	<li>Verifier.accounts.firefox.com</li>
           </ul>
-          <br>
-          <strong>Firefox Sync</strong>
+
+          <h4>Firefox Sync</h4>
           <ul>
           	<li>*.$region.sync.services.mozilla.com</li>
           	<li>Token.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Firefox Hello</strong>
+
+          <h4>Firefox Hello</h4>
           <ul>
           	<li>hello.firefox.com</li>
           	<li>Loop.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Location (MLS)</strong>
+
+          <h4>Location (MLS)</h4>
           <ul>
           	<li>location.services.mozilla.com</li>
           	<li>Location-leaderboard.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Marketplace.firefox.com</strong>
+
+          <h4>Marketplace.firefox.com</h4>
           <ul>
           	<li>marketplace.firefox.com</li>
           	<li>receiptcheck.marketplace.firefox.com</li>
           	<li>Static.marketplace.firefox.com</li>
           </ul>
-          <br>
-          <strong>Persona</strong>
+
+          <h4>Persona</h4>
           <ul>
           	<li>browserid.org</li>
           	<li>firefoxos.persona.org</li>
@@ -211,14 +216,14 @@
           	<li>login.persona.org</li>
           	<li>Diresworb.org</li>
           </ul>
-          <br>
-          <strong>Push</strong>
+
+          <h4>Push</h4>
           <ul>
           	<li>push.services.mozilla.com</li>
           	<li>Updates.push.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Telemetry</strong>
+
+          <h4>Telemetry</h4>
           <ul>
           	<li>incoming.telemetry.mozilla.org</li>
           	<li>telemetry-experiment.cdn.mozilla.net</li>
@@ -226,31 +231,31 @@
           	<li>sql.telemetry.mozilla.org</li>
           	<li>Metrics.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Test Pilot</strong>
+
+          <h4>Test Pilot</h4>
           <ul>
           	<li>testpilot.firefox.com</li>
           </ul>
-          <br>
-          <strong>Tiles</strong>
+
+          <h4>Tiles</h4>
           <ul>
           	<li>tiles.cdn.mozilla.net</li>
           	<li>tiles.services.mozilla.com</li>
           </ul>
-          <br>
-          <strong>Tracking Protection</strong>
+
+          <h4>Tracking Protection</h4>
           <ul>
           	<li>shavar.services.mozilla.com</li>
           	<li>tracking.services.mozilla.com</li>
           </ul>
 
-          <p>The Mozilla Developer Network (developer.mozilla.org) and wiki.mozilla.org have  been removed from this
+          <p>The Mozilla Developer Network (developer.mozilla.org) and wiki.mozilla.org have been removed from this
             list due to site vandalism by researchers looking for security issues. They will be
             added back at a later date when a test server is deployed to avoid negative impacts
             on our primary reference site.</p>
 
-          <p>Only Mozilla websites and services are in scope. Issue categories explicitly excluded 
-            from eligibility include not denial of service attacks, email phishing attacks
+          <p>Only Mozilla websites and services are in scope. Issue categories explicitly excluded
+            from eligibility include denial of service attacks, email phishing attacks
             against employees, our offices, etc. Additionally, flaws relying on out-of-date
             browsers, plugins, or add-ons, which require extremely unlikely/unusual user
             interaction, and banner and version information are generally not eligible.</p>
@@ -263,12 +268,12 @@
             website and services bug bounty program, we would still like to know. If the bug is
             extraordinary, we might still consider the bug to be nominated for a bounty. In
             the past we have paid for interesting bugs which are outside of normal
-            policy, but it's the rare exception and not the rule. It's hard to define 'extraordinary,' 
+            policy, but it’s the rare exception and not the rule. It's hard to define “extraordinary”,
             since by definition there are no common examples.
             If you are searching security issues for the joy of it or to help the Mozilla project,
             we would appreciate reports on non-eligible sites.
-            If you are looking for bug bounties, focus on the sites listed as eligible, don't hunt for 
-            "extraordinary" bugs on sites not listed in thie FAQ. 
+            If you are looking for bug bounties, focus on the sites listed as eligible, don’t hunt for
+            “extraordinary” bugs on sites not listed in thie FAQ.
             .</p>
         </dd>
 
@@ -309,20 +314,22 @@
         <dt class="question" id="what-next">Once I have found a
           vulnerability, what next?</dt>
         <dd class="answer">
-          <strong><p>Follow the <a href="https://www.mozilla.org/en-US/security/web-bug-bounty/">guide on submitting a web or service security bug</a> and then <a href="https://bugzilla.mozilla.org/form.web.bounty">
-            file a bug</a>.</strong>
+          <p>
+            <strong>Follow the <a href="{{ url('security.web-bug-bounty') }}">guide on submitting a web or service security bug</a> and then
+            <a href="https://bugzilla.mozilla.org/form.web.bounty">file a bug</a>.</strong>
             When filing, please verify that you have followed the guidance on how to
             write your report in order to assure it is evaluated as quickly as possible.
             Repeat the attack using only your own description in order to prevent
             errors and omissions, then update your documentation to be submitted.
-            <strong>Please do not ever submit website vulnerabilities via email.</strong></p>
+            <strong>Please do not ever submit website vulnerabilities via email.</strong>
+          </p>
         </dd>
 
         <dt class="question" id="nondisclosure">If I report the bug
           directly to you, do I have to keep the bug confidential and not publish
           information about it in order to receive a reward?</dt>
         <dd class="answer">
-          <p>No. We're rewarding you for finding a bug, not trying to buy
+          <p>No. We’re rewarding you for finding a bug, not trying to buy
             your silence. However if you report the bug through the standard
             Mozilla process and haven’t already published information about it then
             we do ask that you follow the guidelines set forth in the official
