--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -152,6 +152,11 @@
           	<li>bugzilla.mozilla.org</li>
           </ul>
 
+          <h4>Crash report (socorro)</h4>
+          <ul>
+            <li>crash-stats.mozilla.com</li>
+          </ul>
+
           <h4>Product Delivery</h4>
           <ul>
           	<li>download-installer.cdn.mozilla.net</li>
@@ -221,6 +226,16 @@
           <ul>
           	<li>push.services.mozilla.com</li>
           	<li>Updates.push.services.mozilla.com</li>
+          </ul>
+
+          <h4>SUMO</h4>
+          <ul>
+            <li>support.mozilla.org</li>
+          </ul>
+
+          <h4>Teach</h4>
+          <ul>
+            <li>teach.mozilla.org</li>
           </ul>
 
           <h4>Telemetry</h4>
