--- a/bedrock/mozorg/templates/mozorg/contribute/friends.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/friends.html
@@ -17,15 +17,15 @@
 {% block contrib_page_title %}{{ _('Join Firefox Friends today!') }}{% endblock %}
 
 {% block alt_header %}
-<img src="{{ static('img/contribute/friends/firefox-friends-logo.svg') }}" width="186" class="ff-logo" data-png="{{ static('img/contribute/friends/firefox-friends-logo.png') }}" data-fallback="true" alt="{{ _('Firefox Friends logo') }}" />
-<div class="ff-header-content">
-  <h1>{{ _('Sign up. Read up. Pass it on.') }}</h1>
-  <p>{{ _('Sign up for the Firefox Friends newsletter and help us spread the word about all that Mozilla does — from defending a free and open Internet around the globe to constantly striving to make Firefox the best browser on the planet.') }}</p>
-  <p>
-    {{ _('Get involved today.') }}
-    {{ _('Sign up for the Firefox Friends newsletter.') }}
-  </p>
-  <button type="button" id="ff-show-signup-form" class="ff-join-now">{{ _('Sign Me Up') }}</button>
+<div id="masthead-content">
+  <img src="{{ static('img/contribute/friends/firefox-friends-logo.svg') }}" width="186" class="ff-logo" data-png="{{ static('img/contribute/friends/firefox-friends-logo.png') }}" data-fallback="true" alt="{{ _('Firefox Friends logo') }}" />
+  <div class="ff-header-content">
+    <h1>{{ _('Are You<br> a Firefox Fan?') }}</h1>
+
+    <p class="ff-copy">
+      {{ _('If you believe in defending a free and open Internet and you think Firefox is the best browser on the planet, sign up here to show your support.') }}
+    </p>
+  </div>
 </div>
 {% endblock %}
 
@@ -33,12 +33,31 @@
 
 {% block contrib_content %}
 <section class="ff-signup" id="ff-signup">
+  <div id="ff-signup-copy" class="ff-copy">
+    <p>
+      {{ _('Occasionally we need a hand from our biggest backers, and when you sign up, we’ll be able to let you know about the following opportunities to help out in the future:') }}
+    </p>
+
+    <ul>
+      <li>
+        <h2>{{ _('Amplification') }}</h2>
+        {{ _('Do you like to yell from the mountaintops about Firefox? Great!') }}
+        {{ _('When we need help amplifying new campaigns, we’ll let you know.') }}
+      </li>
+      <li>
+        <h2>{{ _('Feedback') }}</h2>
+        {{ _('If you never hold back on honest criticism and praise when asked for your opinion, we’d love to hear what you think.') }}
+        {{ _('We’ll be in touch when Firefox feedback opportunities arise.') }}
+      </li>
+    </ul>
+  </div>
+
   <div id="footer-email-errors" class="hidden newsletter-form-extra">
     <ul class="errorlist"></ul>
   </div>
 
   <div class="ff-signup-wrapper">
-    <form id="newsletter-form" class="newsletter-form footer-newsletter-form" action="{{ url('newsletter.subscribe') }}" method="post">
+    <form id="newsletter-form" class="newsletter-form footer-newsletter-form" action="{{ url('newsletter.subscribe') }}" method="post" data-spinner-color="#fff">
       {{ newsletter_form.newsletters|safe }}
       <input type="hidden" name="source_url" value="{{ request.build_absolute_uri() }}">
       <div id="form-details" class="fields-with-labels">
@@ -59,6 +78,14 @@
         <div class="field field-country">{{ newsletter_form.country|safe }}</div>
         <div class="field field-format">{{ newsletter_form.fmt|safe }}</div>
         <div class="field field-privacy">{{ newsletter_form.privacy|safe }}</div>
+        <div class="field field-fx-and-you">
+          <label for="id_fx-and-you">
+            <input id="id_fx-and-you" name="fx-and-you" type="checkbox">
+            <span class="title">
+              {{ _('Yes, I’d like to stay up-to-date with all the latest and greatest Firefox news by subscribing to the <em>Firefox + You</em> newsletter here.') }}
+            </span>
+          </label>
+        </div>
         <input id="footer_email_submit" name="test-submit" type="submit" value="{{ _('Sign Me Up') }}" class="ff-join-now">
         <p><small>{{ _('We will only send you Mozilla-related information.') }}</small></p>
       </div>
@@ -76,26 +103,6 @@
       If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
     {% endtrans %}
     </p>
-  </div>
-</section>
-<section class="ff-body-content">
-  <h2>{{ _('Why sign up?') }}</h2>
-
-  <div class="how-wrapper">
-    <div class="how">
-      <h3 class="connected">{{ _('Be the first to know') }}</h3>
-      <p>{{ _('Get the scoop on the latest Firefox and Mozilla news.') }}</p>
-    </div>
-
-    <div class="how">
-      <h3 class="sharing">{{ _('Have your say') }}</h3>
-      <p>{{ _('Give us your feedback and help make an impact!') }}</p>
-    </div>
-
-    <div class="how">
-      <h3 class="rewarded">{{ _('Get Firefox exclusives') }}</h3>
-      <p>{{ _('The more engaged you are, the greater your chances.') }}</p>
-    </div>
   </div>
 </section>
 
