--- a/media/css/mozorg/contribute/friends.less
+++ b/media/css/mozorg/contribute/friends.less
@@ -4,220 +4,185 @@
 
 @import "../../sandstone/lib.less";
 
-// button used in both header and sign up form
-.ff-join-now {
-    .font-size(20px);
-    background-color: #f26c24;
-    border: 0;
-    border-radius: 2px;
+#wrapper {
+    padding-bottom: 0;
+    width: 100%;
+}
+
+#masthead {
+    background: #373737 url(/media/img/contribute/friends/hero-image-home.jpg) 50% 0 no-repeat;
+    padding: 0;
+    width: 100%;
+
+    @media only screen and (max-width: @breakMobileLandscape) {
+        background-image: url(/media/img/contribute/friends/hero-image-home-mobile.jpg);
+    }
+}
+
+#masthead-content {
+    padding: 0 (@gridGutterWidth * 4);
+
+    @media only screen and (max-width: @breakTablet) {
+        padding: 0 (@gridGutterWidth * 2);
+    }
+
+    @media only screen and (max-width: @breakMobileLandscape) {
+        padding: 0 @gridGutterWidth;
+    }
+}
+
+#colophon {
+    margin-top: 0;
+}
+
+h1,
+h2,
+h3 {
     color: #fff;
-    cursor: pointer;
-    display: block;
-    padding: 10px 30px;
-    width: 280px;
+    font-weight: 700;
 }
 
-.firefox-friends {
-    #wrapper {
-        padding-bottom: 0;
-        width: 100%;
-    }
+h2 {
+    .font-size(40px);
+}
 
-    #masthead {
-        .border-box();
-        background: #373737 url(/media/img/contribute/friends/hero-image-home.jpg) 50% 0 no-repeat;
-        padding: 0 180px;
-        width: 100%;
+.ff-logo {
+    padding-top: 25px;
+}
 
-        @media only screen and (max-width: 1100px) {
-            padding: 0 100px;
-        }
+.ff-copy {
+    margin: 0 auto;
+    max-width: 640px;
 
-        @media only screen and (max-width: 790px) {
-            padding: 0 50px;
-        }
-
-        @media only screen and (max-width: @breakMobileLandscape) {
-            background-image: url(/media/img/contribute/friends/hero-image-home-mobile.jpg);
-            padding: 0 20px;
-        }
-    }
-
-    #colophon {
-        margin-top: 0;
-    }
-
-    h1,
-    h2,
-    h3 {
-        color: #fff;
-        font-weight: 700;
-    }
-
-    h2 {
-        .font-size(40px);
-    }
-
-    .ff-logo {
-        padding-top: 25px;
-    }
-
-    .ff-header-content {
-        color: #fff;
-        margin: 0 auto;
-        padding: 55px 0 80px 0;
-        text-align: center;
-        width: 100%;
-
-        @media only screen and (max-width: @breakMobileLandscape) {
-            padding-bottom: 80px;
-        }
-
-        h1 {
-            .font-size(64px);
-            margin-bottom: @baseLine * 2;
-            text-shadow: 1px 1px 2px #333;
-
-            @media only screen and (max-width: 790px) {
-                .font-size(48px);
-            }
-
-            @media only screen and (max-width: @breakMobileLandscape) {
-                .font-size(40px)
-            }
-        }
-        p {
-            .font-size(22px);
-            margin: @baseLine auto 0;
-            max-width: 700px;
-            text-shadow: 1px 1px 2px #333;
-
-            @media only screen and (max-width: 790px) {
-                .font-size(18px);
-                max-width: 500px;
-            }
-
-            @media only screen and (max-width: @breakMobileLandscape) {
-                .font-size(@largeFontSize);
-            }
-        }
-
-        .ff-join-now {
-            margin: 70px auto 0 auto;
-            .transition(opacity 0.3s ease-in 0.1s);
-
-            &.invisible {
-                cursor: default;
-                opacity: 0;
-            }
-
-            @media only screen and (max-width: @breakMobileLandscape) {
-                margin-top: 35px;
-            }
-        }
-    }
-
-    main {
-        background-color: #06a6e0;
-    }
-
-    .ff-body-content {
-        color: #fff;
-        margin: 0 auto;
-        max-width: 1000px;
-        padding: 75px 0;
-        text-align: center;
-
-        h2 {
-            margin-bottom: 50px;
-            text-shadow: none;
-
-            @media only screen and (max-width: @breakMobileLandscape) {
-                margin-bottom: 40px;
-            }
-        }
-
-        h3 {
-            .font-size(20px);
-            text-shadow: none;
-            text-transform: uppercase;
-
-            @media only screen and (max-width: 790px) {
-                .font-size(@largeFontSize);
-                line-height: 1.5;
-            }
-        }
-
-        .how-wrapper {
-            .flexbox();
-            .justify-content(space-around);
-
-            @media only screen and (max-width: @breakTablet) {
-                display: block;
-            }
-        }
-
-        .how {
-            .flex(0 0 180px);
-            margin: 0 (@baseLine / 2);
-            vertical-align: top;
-
-            // blue circle behind icons
-            &:before {
-                background: #80daf2;
-                border-radius: 50%;
-                content: '';
-                display: block;
-                height: 180px;
-                margin: 0 auto;
-                width: 180px;
-            }
-
-            h3:before {
-                .at2x('/media/img/contribute/friends/icon-sprite.png', 180px, 720px);
-                background-position: 50% 0;
-                background-repeat: no-repeat;
-                content: '';
-                display: block;
-                height: 180px;
-                margin: -180px 0 @baseLine;
-            }
-
-            h3.sharing:before {
-                background-position: 50% -279px;
-            }
-
-            h3.rewarded:before {
-                background-position: 50% -568px;
-            }
-
-            p {
-                margin: 0 auto;
-                max-width: 200px;
-            }
-
-            @media only screen and (max-width: @breakTablet) {
-                margin-bottom: @baseLine * 2;
-            }
-        }
-    }
-
-    hr {
-        border: 1px solid #fff;
-        margin: 25px auto 55px;
-        width: 20%;
+    @media only screen and (max-width: @breakTablet) {
+        max-width: none;
+        width: auto;
     }
 }
 
-// hide header button if no JS
-#ff-show-signup-form {
-    display: none;
+.ff-header-content {
+    color: #fff;
+    margin: 0 auto;
+    padding: 60px 0 80px 0;
+    text-align: center;
+    width: 100%;
+
+    h1 {
+        .font-size(60px);
+        margin-bottom: @baseLine * 2;
+        text-shadow: 1px 1px 2px #333;
+
+        br {
+            display: none;
+        }
+
+        @media only screen and (max-width: @breakTablet) {
+            .font-size(48px);
+            margin-bottom: @baseLine;
+        }
+
+        @media only screen and (max-width: @breakMobileLandscape) {
+            .font-size(36px);
+
+            br {
+                display: block;
+            }
+        }
+    }
+
+    p {
+        .font-size(22px);
+        line-height: 1.3;
+        margin-bottom: @baseLine;
+        text-shadow: 1px 1px 2px #333;
+
+        @media only screen and (max-width: @breakTablet) {
+            .font-size(18px);
+            max-width: 500px;
+        }
+
+        @media only screen and (max-width: @breakMobileLandscape) {
+            .font-size(@largeFontSize);
+        }
+    }
+}
+
+main {
+    background-color: #06a6e0;
 }
 
 #ff-signup {
     background: #00539f;
+    color: #fff;
     padding: (@baseLine * 2) 0;
     position: relative;
+}
+
+#ff-signup-copy {
+    .font-size(@largeFontSize);
+    .open-sans-light();
+    margin-bottom: @baseLine * 3;
+    text-align: center;
+
+    ul {
+        list-style-type: none;
+        padding-top: @baseLine;
+        margin: 0;
+    }
+
+    li {
+        .border-box();
+        background: #266dad;
+        background: rgba(255, 255, 255, 0.15);
+        border-radius: 4px;
+        margin: 0 0 @baseLine 0;
+        padding: @baseLine (@baseLine / 2);
+    }
+
+    h2 {
+        .font-size(22px);
+        text-align: center;
+        text-shadow: none;
+    }
+
+    @media only screen and (max-width: @breakTablet) {
+        padding: 0 @gridGutterWidth;
+        width: @breakMobileLandscape - (@gridGutterWidth * 2);
+    }
+
+    @media only screen and (max-width: @breakMobileLandscape) {
+        padding: 0 (@gridGutterWidth / 2);
+        width: @breakMobile - @gridGutterWidth;
+    }
+}
+
+@supports (display: flex) {
+    #ff-signup-copy {
+        ul {
+            .flexbox();
+            .justify-content(center);
+
+            @media only screen and (max-width: @breakMobileLandscape) {
+                display: block;
+            }
+        }
+
+        li {
+            .flex(0 0 300px);
+            margin: 0 @baseLine @baseLine;
+            width: 300px;
+
+            @media only screen and (max-width: @breakTablet) {
+                .flex(0 0 200px);
+                width: 200px;
+            }
+
+            @media only screen and (max-width: @breakMobileLandscape) {
+                margin: 0 0 @baseLine;
+                width: auto;
+            }
+        }
+    }
 }
 
 .ff-signup-wrapper {
@@ -305,10 +270,6 @@
         color: #fff;
     }
 
-    .ff-join-now {
-        margin: (@baseLine * 2) 0 (@baseLine / 2);
-    }
-
     // do away with offset layout and just center form
     @media only screen and (max-width: @breakTablet) {
         left: 0;
@@ -317,7 +278,61 @@
 
     @media only screen and (max-width: @breakMobileLandscape) {
         width: 300px;
+
+        p {
+            text-align: center;
+        }
     }
+}
+
+// same styling as applied to .field-privacy in standstone-resp.less
+.field-fx-and-you {
+    .font-size(@smallFontSize);
+    display: none;
+
+    input {
+        float: left;
+    }
+
+    .title {
+        display: block;
+        padding: 0 0 0 25px;
+    }
+}
+
+// JS must be enabled to update newsletters field when user checks this box
+.js .field-fx-and-you {
+    display: block;
+}
+
+.ff-join-now {
+    .font-size(20px);
+    .transition(opacity 0.3s ease-in 0.1s);
+    background-color: #f26c24;
+    border-radius: 2px;
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    margin: (@baseLine * 2) 0 (@baseLine / 2);
+    padding: (@baseLine / 2) (@gridGutterWidth * 1.5);
+    width: 280px;
+
+    &.invisible {
+        cursor: default;
+        opacity: 0;
+    }
+
+    @media only screen and (max-width: @breakMobileLandscape) {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 35px;
+    }
+}
+
+// form details should always be visible
+.js #form-details {
+    display: block;
 }
 
 // errors and thank you message
@@ -353,24 +368,6 @@
     }
 }
 
-// JS default states
-.js {
-    // override hiding of form details
-    #form-details {
-        display: block;
-    }
-
-    // show header button
-    #ff-show-signup-form {
-        display: block;
-    }
-
-    // hide signup area
-    #ff-signup {
-        display: none;
-    }
-}
-
 // upcase labels for en-* locales
 html[lang^="en"] .fields-with-labels label {
     text-transform: uppercase;
@@ -378,11 +375,6 @@ html[lang^="en"] .fields-with-labels label {
 
 // tweaks for RTL locales
 html[dir="rtl"] {
-    .how {
-        padding-left: 0;
-        padding-right: 7%;
-    }
-
     .ff-signup-wrapper {
         left: auto;
         margin-right: -290px;
