[fix bug 1275431] Add language switcher to product page footer

--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -89,7 +89,7 @@
 
     .download-button {
         vertical-align: baseline;
-        
+
         .fx-privacy-link {
             display: none;
         }
@@ -608,6 +608,14 @@ html[dir='rtl'] {
             &:last-child:after {
                 content: '';
             }
+        }
+    }
+
+    form {
+        display: inline-block;
+
+        label {
+            color: @textColorTertiary;
         }
     }
 }
