--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -173,6 +173,9 @@
 
     <ul>
       <li>
+        {% include 'includes/lang_switcher.html' %}
+      </li>
+      <li>
         <a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy Policy">{{ _('Privacy Policy') }}</a>
       </li>
       <li>
