--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -291,7 +291,6 @@ ul.download-list {
 .download-button .linux-arm-download,
 .download-button .unrecognized-download,
 .download-button .unsupported-download,
-.download-button .unsupported-download-osx,
 .download-button .nojs-download {
     display: none;
 }
@@ -320,8 +319,7 @@ ul.download-list {
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
 .windows .download-button .os_win,
-.osx:not(.pre-mavericks) .download-button .os_osx,
-.osx.pre-mavericks .download-button:not(.mavericks-required) .os_osx,
+.osx .download-button .os_osx,
 .android .download-button .os_android,
 .download-button-android .os_android,
 .android .download-button-desktop .download-list,
@@ -335,7 +333,6 @@ ul.download-list {
     display: block !important;
 }
 
-.osx.pre-mavericks .download-button.mavericks-required .unsupported-download-osx,
 .windows.arm .download-button .unsupported-download,
 .linux.arm .download-button .linux-arm-download,
 .oldwin .download-button .unsupported-download,
@@ -345,7 +342,6 @@ ul.download-list {
 }
 
 // Hide the privacy link if platform is unsupported.
-.osx.pre-mavericks .download-button.mavericks-required .fx-privacy-link,
 .windows.arm .download-button .fx-privacy-link,
 .linux.arm .download-button .fx-privacy-link,
 .oldwin .download-button .fx-privacy-link,
